# url-shortener

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
shortener/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
shortener/migrations/: 0001_initial.py
url_shortener/: settings.py
